Move GoBack to ViewModelBase + fixes

--- a/App/Voltflow/Views/Pages/Charging/TransactionView.axaml
+++ b/App/Voltflow/Views/Pages/Charging/TransactionView.axaml
@@ -78,7 +78,7 @@
             </StackPanel>
         </Button>
 
-        <Button HorizontalAlignment="Stretch" Command="{Binding GoBack}">
+        <Button HorizontalAlignment="Stretch" Command="{Binding NavigateHome}">
             <StackPanel Orientation="Horizontal">
                 <iconPacks:PackIconMaterialDesign Kind="ArrowBack" />
                 <TextBlock Text="Go Back" />
