--- a/App/Voltflow/Views/Account/Panels/PasswordPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/PasswordPanel.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Voltflow.Views.Account.Panels.PasswordResetForm"
+    x:Class="Voltflow.Views.Account.Panels.PasswordForm"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -20,7 +20,7 @@
     </UserControl.Resources>
 
     <!--  Form  -->
-    <StackPanel IsEnabled="{Binding !PasswordResetForm.Working}" IsVisible="{Binding CurrentAuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=PasswordReset}">
+    <StackPanel IsEnabled="{Binding !PasswordForm.Working}" IsVisible="{Binding CurrentAuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=PasswordReset}">
         <!--  Email input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
@@ -30,7 +30,7 @@
             <TextBlock Classes="size-sm weight-bold" Text="Email" />
         </StackPanel>
 
-        <Grid IsEnabled="{Binding !PasswordResetForm.SentToken}">
+        <Grid IsEnabled="{Binding !PasswordForm.SentToken}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="8" />
@@ -39,16 +39,16 @@
 
             <TextBox
                 Grid.Column="0"
-                Text="{Binding PasswordResetForm.Email}"
+                Text="{Binding PasswordForm.Email}"
                 Watermark="example@gmail.com" />
 
             <Button Grid.Column="2" Command="{Binding GetResetPasswordToken}">
-                <iconPacks:PackIconMaterialDesign IsVisible="{Binding !PasswordResetForm.ShowPassword}" Kind="Send" />
+                <iconPacks:PackIconMaterialDesign IsVisible="{Binding !PasswordForm.ShowPassword}" Kind="Send" />
             </Button>
         </Grid>
 
         <!--  Token input  -->
-        <StackPanel IsEnabled="{Binding PasswordResetForm.SentToken}">
+        <StackPanel IsEnabled="{Binding PasswordForm.SentToken}">
             <StackPanel Classes="sm-spacing" Orientation="Horizontal">
                 <iconPacks:PackIconMaterialDesign
                     Classes="size-sm"
@@ -56,11 +56,11 @@
                     Kind="Key" />
                 <TextBlock Classes="size-sm weight-bold" Text="Password Reset Token" />
             </StackPanel>
-            <TextBox Text="{Binding PasswordResetForm.Token}" Watermark="Enter received token here" />
+            <TextBox Text="{Binding PasswordForm.Token}" Watermark="Enter received token here" />
         </StackPanel>
 
         <!--  Password input  -->
-        <StackPanel IsEnabled="{Binding PasswordResetForm.SentToken}">
+        <StackPanel IsEnabled="{Binding PasswordForm.SentToken}">
             <StackPanel Classes="sm-spacing" Orientation="Horizontal">
                 <iconPacks:PackIconMaterialDesign
                     Classes="size-sm"
@@ -79,14 +79,14 @@
                     Grid.Column="0"
                     MaxLength="32"
                     PasswordChar="*"
-                    RevealPassword="{Binding PasswordResetForm.ShowPassword}"
-                    Text="{Binding PasswordResetForm.Password}"
+                    RevealPassword="{Binding PasswordForm.ShowPassword}"
+                    Text="{Binding PasswordForm.Password}"
                     Watermark="Example123@" />
 
-                <Button Grid.Column="2" Command="{Binding PasswordResetForm.TogglePassword}">
+                <Button Grid.Column="2" Command="{Binding PasswordForm.TogglePassword}">
                     <StackPanel>
-                        <iconPacks:PackIconMaterialDesign IsVisible="{Binding !PasswordResetForm.ShowPassword}" Kind="Visibility" />
-                        <iconPacks:PackIconMaterialDesign IsVisible="{Binding PasswordResetForm.ShowPassword}" Kind="VisibilityOff" />
+                        <iconPacks:PackIconMaterialDesign IsVisible="{Binding !PasswordForm.ShowPassword}" Kind="Visibility" />
+                        <iconPacks:PackIconMaterialDesign IsVisible="{Binding PasswordForm.ShowPassword}" Kind="VisibilityOff" />
                     </StackPanel>
                 </Button>
             </Grid>
@@ -119,7 +119,7 @@
                 HorizontalContentAlignment="Center"
                 Classes="Success"
                 Command="{Binding ResetPassword}"
-                IsEnabled="{Binding PasswordResetForm.SentToken}">
+                IsEnabled="{Binding PasswordForm.SentToken}">
                 <StackPanel Orientation="Horizontal">
                     <iconPacks:PackIconMaterialDesign Kind="Check" />
                     <TextBlock Text="Reset" />
