--- a/App/Voltflow/Views/Account/AccountView.axaml
+++ b/App/Voltflow/Views/Account/AccountView.axaml
@@ -26,7 +26,7 @@
         <accountPages:SignUpForm />
         <accountPages:SignInForm />
         <accountPages:TwoFactorAuthForm />
-        <accountPages:PasswordResetForm />
+        <accountPages:PasswordForm />
         <accountPages:EmailVerificationForm />
         <accountPages:AccountPanel />
     </StackPanel>
